[package]
name = "load_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.13", features = ["derive"] }
features = "0.10.0"
json = "0.12.4"
reqwest = { version = "0.11.23", features = ["json"] }
futures = "0.3.30"
